<resources>
    <string name="app_name" translatable="false">DearO</string>
    <string name="login_button_next" translatable="false">Next</string>
    <string name="error_mobile_number_not_valid" translatable="false">Phone Number is required</string>
    <string name="read_otp_enter_otp" translatable="false">Enter the OTP sent to</string>
    <string name="resend_otp" translatable="false">Resend OTP</string>
    <string name="version" translatable="false">1.0.0</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="drawer_open" translatable="false">open</string>
    <string name="drawer_close" translatable="false">close</string>
    <string name="permission_explanation_header" translatable="false">Hello, </string>
    <string name="permission_camera_and_storage_permission_combined_explanation" translatable="false">Need camera permission for taking pictures</string>
    <string name="permission_read_sms_explanation" translatable="false">Need Read SMS permission for auto detecting sms</string>
    <string name="permission_make_call_explanation" translatable="false">We\'ll need permission to make call</string>
    <string name="permission_save_file" translatable="false">We\'ll Need permission to save file on your device</string>
    <string name="permission_call_explanation" translatable="false">We\'ll Need permission for making call</string>
    <string name="permission_read_contacts" translatable="false">We\'ll need permission to read contact automatically</string>
    <string name="init_job_card" translatable="false">Initiate Job Card</string>
    <string name="inventory_rb_walkin" translatable="false">WalkIn</string>
    <string name="inventory_rb_pick_up" translatable="false">Pick Up</string>
    <string name="inventory_rb_doorstep" translatable="false">Doorstep</string>
    <string name="caption" translatable="false">Caption</string>
    <string name="add_item" translatable="false">+ Add Item</string>
    <string name="no_cards_available" translatable="false">No Cards Yet!</string>
    <string name="termsAndConditions" translatable="false"><font color="#2196F3"><u>Terms and Conditions</u></font> </string>
    <string name="policy" translatable="false"> &amp; <font color="#2196F3"><u>Privacy Policy</u></font></string>
    <string name="noDetailsFound" translatable="false">No Details Found</string>
    <string name="part_text" translatable="false">Part Name </string>
    <string name="invoice" translatable="false">Invoice</string>
    <string name="estimate" translatable="false">Estimate</string>
    <string name="payment" translatable="false">Payment</string>
    <string name="payment_pending" translatable="false">Payment Integration to be done…</string>
    <string name="undone_warning" translatable="false">This cannot be undone</string>
    <string name="invoice_title" translatable="false">Raise Invoice</string>
    <string name="done" translatable="false">Done</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="share_pdf" translatable="false">Choose an app to share</string>
    <string name="invoice_download" translatable="false">Downloaded Invoice</string>
    <string name="view_invoice" translatable="false">View Invoice</string>
    <string name="update_payment" translatable="false">Update Payment</string>
    <string name="edit_proforma" translatable="false">Edit Proforma</string>
    <string name="edit_parts_and_labor" translatable="false">Edit Parts &amp; Labour</string>
    <string name="job_complete" translatable="false">Job Complete</string>
    <string name="job_completed" translatable="false">Job Completed</string>
    <string name="add_job" translatable="false">Add Job</string>
    <string name="continue_job" translatable="false">Continue Job Card</string>
    <string name="cancel_job" translatable="false">Cancel Job Card</string>
    <string name="total_warning" translatable="false">Total Cannot be Less than 0</string>
    <string name="additional_jobs" translatable="false">Additional Jobs</string>
    <string name="demanded_repairs" translatable="false">Demanded Repairs</string>
    <string name="services_to_be_done" translatable="false">Services to be done</string>
    <string name="regular_service" translatable="false">Regular Service</string>
    <string name="dearO_recommended_jobs" translatable="false">DearO Recommended Jobs</string>
    <string name="total" translatable="false">Total</string>
    <string name="delete_warning" translatable="false">Are you sure you want to delete this item?</string>
    <string name="delete_warning_title" translatable="false">Delete Confirm</string>
    <string name="edit_item" translatable="false">Edit Item</string>
    <string name="add_item_title" translatable="false">Add Item</string>
    <string name="labour" translatable="false">Labour</string>
    <string name="already_selected" translatable="false">Already selected in Recommended Jobs</string>
    <string name="check_internet" translatable="false">Check Internet Connection</string>
    <string name="completeStep_Save" translatable="false">Please complete this step and save</string>
    <string name="item_to_be_added" translatable="false">Item to Be added</string>
    <string name="clicked_image" translatable="false">Clicked Image</string>
    <string name="edit_customer_details" translatable="false">edit_Customer Details</string>
    <string name="dearO_logo" translatable="false">DearO Logo</string>
    <string name="mobile_number_hint" translatable="false">Mobile Number</string>
    <string name="terms_string" translatable="false">By clicking on Next you are agreeing to the following</string>
    <string name="raise_invoice_amp_payment" translatable="false"><![CDATA[Raise Invoice & Payment]]></string>
    <string name="show_pdf" translatable="false">Show PDF</string>
    <string name="preview" translatable="false">PREVIEW</string>
    <string name="add_part_or_labour_or_offer" translatable="false">Add part Or Labour or Offer</string>
    <string name="search_image" translatable="false">Search ImageView</string>
    <string name="no_data_found" translatable="false">EmptyList Image</string>
    <string name="cost_estimation_assistance" translatable="false">Estimate Assist</string>
    <string name="info" translatable="false">Info</string>
    <string name="lower_rate" translatable="false">Lower Rate</string>
    <string name="raise_rate" translatable="false">Raise Rate</string>
    <string name="customer_verbatim" translatable="false">Customer Concerns</string>
    <string name="estimated_delivery_time" translatable="false">Estimated Delivery Time</string>
    <string name="date" translatable="false">Date</string>
    <string name="dummy_date" translatable="false">Fri,Jul 15 2020</string>
    <string name="time" translatable="false">Time</string>
    <string name="dummy_time" translatable="false">12:30 PM</string>
    <string name="cost_estimate" translatable="false">Cost Estimate</string>
    <string name="dummy_estimate" translatable="false">Eg. 10000</string>
    <string name="to" translatable="false">to</string>
    <string name="rs" translatable="false">Rs.</string>
    <string name="clicked_images" translatable="false">Clicked Images</string>
    <string name="options" translatable="false">Options</string>
    <string name="fuel_reading" translatable="false">Fuel Reading*</string>
    <string name="e" translatable="false">E</string>
    <string name="f" translatable="false">F</string>
    <string name="kilometer_reading" translatable="false">Kilometer Reading</string>
    <string name="sample_number" translatable="false">7565</string>
    <string name="call_button" translatable="false">Call Button</string>
    <string name="fuel_indicator" translatable="false">Fuel Indicator</string>
    <string name="employee_picture" translatable="false">Employee Picture</string>
    <string name="expand_collapse" translatable="false">expand/collapse</string>
    <string name="sample_inventory_item" translatable="false">Fog Lamp</string>
    <string name="clock" translatable="false">Clock</string>
    <string name="money" translatable="false">Money</string>
    <string name="otp_error" translatable="false">OTP did not match</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="zero" translatable="false">0</string>
    <string name="discount" translatable="false">Discount</string>
    <string name="sample_customer" translatable="false">Dibyuendu Tapadar</string>
    <string name="details_error" translatable="false">Contact Details doesn\'t match</string>
    <string name="sample_locality" translatable="false">Goregaon East</string>
    <string name="add_alternate_number" translatable="false">Add Alternate Number</string>
    <string name="enter_correct_number" translatable="false">Enter Correct Number</string>
    <string name="enter_otp" translatable="false">Enter OTP</string>
    <string name="create_job_card" translatable="false">Create Job Card</string>
    <string name="service_remainder_in_3_months" translatable="false">In 3 Months</string>
    <string name="service_remainder_none" translatable="false">None</string>
    <string name="service_remainder_in_6_months" translatable="false">In 6 Months</string>
    <string name="service_remainder_in_12_months" translatable="false">In 12 Months</string>
    <string name="service_remainder_in_18_months" translatable="false">In 18 Months</string>
    <string name="service_remainder_custom" translatable="false">Custom</string>
    <string name="filter_screen_label_filter_by" translatable="false">Filter By</string>
    <string name="filter_screen_title_end_date" translatable="false">End Date</string>
    <string name="filter_screen_title_start_date" translatable="false">Start Date</string>
    <string name="filter_screen_btn_title_apply" translatable="false">Apply</string>
    <string name="appointment_reschedule_btn_reschedule" translatable="false">Reschedule</string>
    <string name="appointment_reschedule_hint_add_a_comment" translatable="false">Add a comment</string>
    <string name="appointment_reschedule_label_other" translatable="false">Other</string>
    <string name="appointment_reschedule_label_driver_not_available_for_pickup" translatable="false">Driver not available for Pickup</string>
    <string name="appointment_reschedule_reason_not_interested_in_make_model" translatable="false">Not Interested in Make/Model</string>
    <string name="appointment_reschedule_reason_service_load_full" translatable="false">Service Load Full</string>
    <string name="appointment_reschedule_reason_workshop_closed" translatable="false">Workshop Closed</string>
    <string name="navigation_menu_otc_sales" translatable="false">Counter Sales</string>
    <string name="navigation_menu_appointment" translatable="false">Appointments</string>
    <string name="navigation_menu_home" translatable="false">Home</string>
    <string name="navigation_menu_amc" translatable="false">AMC</string>
    <string name="navigation_menu_job_card" translatable="false">Job Cards</string>
    <string name="navigation_menu_repair_bills" translatable="false">Repair Bills</string>
    <string name="navigation_menu_my_customers" translatable="false">My Customers</string>
    <string name="navigation_menu_part_finder" translatable="false">Part Finder(Beta)</string>
    <string name="navigation_menu_spares" translatable="false">Spares</string>
    <string name="navigation_menu_my_profile" translatable="false">My Profile</string>
    <string name="navigation_menu_terms_and_condition" translatable="false">Terms and Conditions</string>
    <string name="navigation_menu_privacy_policy" translatable="false">Privacy Policy</string>
    <string name="navigation_menu_contact_us" translatable="false">Contact Us</string>
    <string name="navigation_menu_logout" translatable="false">Logout</string>
</resources>