<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/rg_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_ws_closed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/appointment_reschedule_reason_workshop_closed" />

        <RadioButton
            android:id="@+id/rb_load_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/appointment_reschedule_reason_service_load_full" />

        <RadioButton
            android:id="@+id/rb_not_interested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            android:text="@string/appointment_reschedule_reason_not_interested_in_make_model" />


        <RadioButton
            android:id="@+id/rb_no_driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/appointment_reschedule_label_driver_not_available_for_pickup" />

        <RadioButton
            android:id="@+id/rb_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/appointment_reschedule_label_other" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            android:hint="@string/appointment_reschedule_hint_add_a_comment"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/rescheduleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:text="@string/appointment_reschedule_btn_reschedule"
        android:textAlignment="center"
        android:textColor="@color/white" />
</LinearLayout>