<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/rgServiceRemainderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/noneView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="8dp"
            android:text="@string/service_remainder_none"
            android:textAppearance="@style/DearOTextAppearance.SubtitleRegular" />


        <RadioButton
            android:id="@+id/threeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/service_remainder_in_3_months"
            android:textAppearance="@style/DearOTextAppearance.SubtitleRegular" />


        <RadioButton
            android:id="@+id/sixView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/service_remainder_in_6_months"
            android:textAppearance="@style/DearOTextAppearance.SubtitleRegular" />

        <RadioButton
            android:id="@+id/twelveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/service_remainder_in_12_months"
            android:textAppearance="@style/DearOTextAppearance.SubtitleRegular" />

        <RadioButton
            android:id="@+id/eighteenView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/service_remainder_in_18_months"
            android:textAppearance="@style/DearOTextAppearance.SubtitleRegular" />


    </RadioGroup>

    <RadioButton
        android:id="@+id/customView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/service_remainder_custom"
        android:textAppearance="@style/DearOTextAppearance.SubtitleRegular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgServiceRemainderView"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>