<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.carworkz.dearo.addjobcard.createjobcard.estimate.EstimateFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_parent_estimator"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_estimation_assistance"
                    android:textColor="@color/black"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/iv_estimate_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/info"
                    app:srcCompat="@drawable/ic_info_outline_black_24dp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/estimated_delivery_time"
                    android:textColor="@color/black" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/ll_estimate_parent_date"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date" />

                        <TextView
                            android:id="@+id/tv_estimate_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                            android:text="@string/dummy_date"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_estimate_parent_time"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time" />

                        <TextView
                            android:id="@+id/tv_estimate_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                            android:text="@string/dummy_time"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10dp"
                    android:text="@string/cost_estimate"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="end"
                        android:text="@string/rs"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_min_estimate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:hint="@string/dummy_estimate"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="8"
                        tools:targetApi="o" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="center"
                        android:text="@string/to"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:gravity="end"
                        android:text="@string/rs"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_max_estimate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.35"
                        android:hint="@string/dummy_estimate"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="8"
                        tools:targetApi="o" />

                </LinearLayout>


                <Button
                    android:id="@+id/btn_create_job_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/create_job_card"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>