<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/pb_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_screen_label_filter_by"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/filterSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/old_lavender"
        android:layout_marginBottom="8dp" />
    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <EditText
                android:id="@+id/etStartDateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:hint="@string/filter_screen_title_start_date"
                android:cursorVisible="false"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <EditText
                android:id="@+id/etEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_date_range_black_24dp"
                android:hint="@string/filter_screen_title_end_date"
                android:cursorVisible="false"
                android:importantForAutofill="no"
                android:inputType="date"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/applyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/filter_screen_btn_title_apply"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>